--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "devDependencies": {
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.11"
+  },
+  "devDependencies": {
+    "webpack": "^4.1.1",
+    "webpack-cli": "^2.0.11"
   }
 }
